Fix for YINY-87 and YINY-121. Header and footer now slide appropriately when the drawer is opened and closed. The crux of the fix was disabling horizontal overflow on #display, which is a parent to both the drawer and the main content.

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -24,6 +24,10 @@ body {
     width:100%;
 }
 
+#display {
+  overflow-x: hidden;
+}
+
 a,
 a:link,
 a:focus,
@@ -96,35 +100,28 @@ a:active {
  * --------------------------------------------------
  */
 @media screen and (max-width: 767px) {
-  .row-offcanvas {
-    position: relative;
-  }
-
-  .row-offcanvas,
-  .navbar-offcanvas {
+  .navbar-offcanvas,
+  .sidebar-offcanvas,
+  #main {
     -webkit-transition: all .25s ease-out;
          -o-transition: all .25s ease-out;
             transition: all .25s ease-out;
   }
 
-  .row-offcanvas-left {
-    left: 0;
-  }
-
-  .row-offcanvas-left
   .sidebar-offcanvas {
-    left: -50%; /* 6 columns */
-  }
-
-  .row-offcanvas-left.active,
-  .row-offcanvas-left.active .navbar-offcanvas {
-    left: 50%; /* 6 columns */
-  }
-
-  .row-offcanvas .sidebar-offcanvas {
+    margin-left: -100%;
     position: absolute;
     top: 0;
-    width: 50%; /* 6 columns */
+    width: 50%;
+  }
+
+  .row-offcanvas-left.active .sidebar-offcanvas {
+    margin-left: 0%; /* 6 columns */
+  }
+
+  .row-offcanvas-left.active #main,
+  .row-offcanvas-left.active .navbar-offcanvas {
+    left: 50%;
   }
 
   #navbar-top {
